Preview actions (share, delete)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -44,5 +44,7 @@
             }
         }
     },
-    "failedPlayVideo": "Failed to play your video"
+    "failedPlayVideo": "Failed to play your video",
+    "previewActionShare": "Share",
+    "previewActionDelete": "Delete"
 }
