--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -17,5 +17,7 @@
     "deleteMovieAlertSecondary": "відмінити",
     "projectTitle": "проєкт #{projectId}",
     "draftTitle": "чернетка #{projectId}",
-    "failedPlayVideo": "Не можемо відтворити ваше відео"
+    "failedPlayVideo": "Не можемо відтворити ваше відео",
+    "previewActionShare": "Поділитися",
+    "previewActionDelete": "Видалити"
 }
