Android Photo Picker

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -19,6 +19,7 @@
     "leaveCancelAlertTitle": "Movie is in progress, do you want to cancel?",
     "leaveCancelAlertPrimary": "cancel",
     "leaveCancelAlertSecondary": "wait",
+    "pickMediaDialogTitle": "Choose images from",
     "mediaSourceCamera": "Camera",
     "mediaSourceGallery": "Gallery",
     "deleteMovieAlertTitle": "Delete the video?",
