--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -10,8 +10,9 @@
     "leaveCancelAlertTitle": "Відео монтується, відмінити?",
     "leaveCancelAlertPrimary": "відмінити",
     "leaveCancelAlertSecondary": "зачекати",
-    "mediaSourceCamera": "Камера",
-    "mediaSourceGallery": "Галерея",
+    "pickMediaDialogTitle": "Виберіть зображення з",
+    "mediaSourceCamera": "Камери",
+    "mediaSourceGallery": "Галереї",
     "deleteMovieAlertTitle": "Видалити відео?",
     "deleteMovieAlertPrimary": "видалити",
     "deleteMovieAlertSecondary": "відмінити",
