--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,6 +22,8 @@
     "pickMediaDialogTitle": "Choose images from",
     "mediaSourceCamera": "Camera",
     "mediaSourceGallery": "Gallery",
+    "pickTransitionDialogTitle": "Choose transition",
+    "transitionNone": "No transition",
     "deleteMovieAlertTitle": "Delete the video?",
     "deleteMovieAlertPrimary": "delete",
     "deleteMovieAlertSecondary": "cancel",
