--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -13,8 +13,13 @@
     "pickMediaDialogTitle": "Виберіть зображення з",
     "mediaSourceCamera": "Камери",
     "mediaSourceGallery": "Галереї",
+    "changeCreationSettingsDialogTitle": "Застосуйте ефекти",
+    "changeCreationSettingsTransition": "Перехід: {transition}",
+    "changeCreationSettingsOrientation": "Орієнтація: {orientation}",
     "pickTransitionDialogTitle": "Виберіть перехід",
     "transitionNone": "Без переходів",
+    "pickOrientationDialogTitle": "Виберіть орієнтацію",
+    "orientationSelector": "{orientation,select, landscape{Пейзажна}portrait{Портретна}square{Квадратна}other{}}",
     "deleteMovieAlertTitle": "Видалити відео?",
     "deleteMovieAlertPrimary": "видалити",
     "deleteMovieAlertSecondary": "відмінити",
