--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -15,7 +15,10 @@
     "mediaSourceCamera": "Камери",
     "mediaSourceGallery": "Галереї",
     "changeCreationSettingsDialogTitle": "Застосуйте ефекти",
+    "durationInSecondsSelector": "{seconds} с",
+    "slideDurationSelector": "Тривалість слайду: {duration}",
     "changeCreationSettingsTransition": "Перехід: {transition}",
+    "transitionDurationSelector": "Тривалість переходу: {duration}",
     "changeCreationSettingsOrientation": "Орієнтація: {orientation}",
     "pickTransitionDialogTitle": "Виберіть перехід",
     "transitionNone": "Без переходів",
