--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -20,10 +20,13 @@
     "changeCreationSettingsTransition": "Перехід: {transition}",
     "transitionDurationSelector": "Тривалість переходу: {duration}",
     "changeCreationSettingsOrientation": "Орієнтація: {orientation}",
+    "changeCreationSettingsResize": "Правила масштабування: {resize}",
     "pickTransitionDialogTitle": "Виберіть перехід",
     "transitionNone": "Без переходів",
     "pickOrientationDialogTitle": "Виберіть орієнтацію",
     "orientationSelector": "{orientation,select, landscape{Пейзажна}portrait{Портретна}square{Квадратна}other{}}",
+    "pickResizeDialogTitle": "Виберіть правила масштабування",
+    "resizeSelector": "{resize,select, contain{Показувати весь контент}cover{Вирізати під розмір}other{}}",
     "deleteMovieAlertTitle": "Видалити відео?",
     "deleteMovieAlertPrimary": "видалити",
     "deleteMovieAlertSecondary": "відмінити",
